@@ -19,7 +19,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -61,9 +60,9 @@ public class AbstractUdmUsageJobProcessorTest {
     public void testJobProcess() {
         UdmUsage usage1 = buildUsage("cff900a1-8f8a-4a49-8171-d3ae5dba1cac");
         UdmUsage usage2 = buildUsage("896c6aac-87c8-4058-be1d-745b8003712b");
-        List<String> usageIds = Arrays.asList(usage1.getId(), usage2.getId());
+        List<String> usageIds = List.of(usage1.getId(), usage2.getId());
         expect(udmUsageService.getUdmUsageIdsByStatus(UsageStatusEnum.NEW)).andReturn(usageIds).once();
-        expect(udmUsageService.getUdmUsagesByIds(usageIds)).andReturn(Arrays.asList(usage1, usage2)).once();
+        expect(udmUsageService.getUdmUsagesByIds(usageIds)).andReturn(List.of(usage1, usage2)).once();
         usageConsumer.accept(List.of(usage1));
         expectLastCall().once();
         usageConsumer.accept(List.of(usage2));
