@@ -23,7 +23,6 @@ import org.springframework.test.context.TestExecutionListeners;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -117,14 +116,14 @@ public class ReconcileRightsholdersTest {
                     "200.0000000000", "168.0000000000", "32.0000000000", SERVICE_FEE_16, new BigDecimal("200.00"),
                     true, true))
             .expectUsageAudit(ImmutableMap.<String, List<UsageAuditItem>>builder()
-                .put("4713282c-c698-4ffb-8de1-44863d48954f", Arrays.asList(buildRhUpdatedAuditItem(2000152614L),
+                .put("4713282c-c698-4ffb-8de1-44863d48954f", List.of(buildRhUpdatedAuditItem(2000152614L),
                     buildLoadedAuditItem(BATCH_NAME)))
                 .put("cf2b4a25-d786-4fee-9c7f-5bec12b017c1", List.of(buildLoadedAuditItem(BATCH_NAME)))
-                .put("d2da6044-7ff7-4b5d-984a-69978b9e0678", Arrays.asList(buildRhUpdatedAuditItem(1000002137L),
+                .put("d2da6044-7ff7-4b5d-984a-69978b9e0678", List.of(buildRhUpdatedAuditItem(1000002137L),
                     buildLoadedAuditItem(BATCH_NAME)))
-                .put("daf2483b-a7b4-415b-81d2-adb328423661", Arrays.asList(buildRhUpdatedAuditItem(1000002137L),
+                .put("daf2483b-a7b4-415b-81d2-adb328423661", List.of(buildRhUpdatedAuditItem(1000002137L),
                     buildLoadedAuditItem(BATCH_NAME)))
-                .put("f1d2c084-973b-4c88-9b45-d4060d87b4ba", Arrays.asList(buildRhUpdatedAuditItem(2000152614L),
+                .put("f1d2c084-973b-4c88-9b45-d4060d87b4ba", List.of(buildRhUpdatedAuditItem(2000152614L),
                     buildLoadedAuditItem(BATCH_NAME)))
                 .put("f9f5d608-c6e7-49dd-b658-174522b0549e", List.of(buildLoadedAuditItem(BATCH_NAME)))
                 .build())
